--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -57,7 +57,7 @@ display: flex;
 }
 
 .center {
-  width: 70%;
+  width: 60%;
   flex: 1;
 }
 
